# ros2_siyia8mini

./: .gitignore  README.md
a8mini_msgs/: CMakeLists.txt  package.xml
a8mini_msgs/msg/: SystemInfo.msg
assets/: README.md
siyi_a8mini/: package.xml  requirements.txt  setup.cfg  setup.py
siyi_a8mini/launch/: a8mini.launch.py
siyi_a8mini/siyi_a8mini/: gimbal_control_node.py  siyi_a8mini_node copy.py  siyi_a8mini_node.py  siyi_message.py  siyi_sdk.py  video_stream_node.py
siyi_a8mini/test/: a8mini_test.py  test_ffplay.py  test_gst.py
